# socket_chat_rust

./: Cargo.toml
src/: client.rs  db.rs  main.rs  message.rs  server.rs
