[package]
name = "socket_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
log = "0.4.22"
rand = "0.8.5"
rusqlite = "0.32.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
text_io = "0.1.12"

[dependencies.simple_logger]
version = "5.0.0"
default-features = false
features = ["colors"]
